--- a/frontend_paychexv2/src/App.css
+++ b/frontend_paychexv2/src/App.css
@@ -1,38 +1,28 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.login-form-container, .login-form{
+  display: flex;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+label{
+  text-align: left;
+  padding: 0.25rem 0;
+}
+input{
+  margin: 0.5rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  border: none;
+  padding: 20px;
+  border-radius: 10px;
+  cursor: pointer;
 }
+
+
