--- a/frontend_paychexv3/src/App.css
+++ b/frontend_paychexv3/src/App.css
@@ -5,17 +5,32 @@
   align-items: center;
   justify-content: center;
 }
-.login-form-container, .login-form, .query-form-container, .query-form{
+.login-form-container, .login-form{
   display: flex;
   flex-direction: column;
 }
 
+.query-form-container, .query-form{
+  display: flex;
+  flex-direction: column;
+}
+
+.response-container {
+  flex: 1;
+  padding: 10px;
+  background-color: #f8f8f8; /* Optional background color for better visibility */
+  overflow: auto; /* Allow scrolling if content exceeds container height */
+  border-left: 1px solid #ccc; /* Optional border for separation */
+}
+
 label{
-  text-align: left;
+  text-align: center;
   padding: 0.25rem 0;
 }
 input{
-  margin: 0.5rem 0;
+  margin: 0.5rem auto;
+  max-width: 250px;
+  width: 100%;
 }
 
 button{
@@ -23,7 +38,10 @@ button{
   padding: 20px;
   border-radius: 10px;
   cursor: pointer;
-  margin: 5px;
+  margin: 5px auto;
+  max-width: 250px;
+  width: 100%;
+  background-color: #2F85CB
 }
 
 
