--- a/frontendv4-web/src/App.css
+++ b/frontendv4-web/src/App.css
@@ -40,7 +40,7 @@ input{
   width: 100%;
 }
 
-textarea{
+#sqlQuery{
   margin: 0.5rem auto 20px;
   min-width: 500px;
   min-height: 300px;
@@ -50,6 +50,25 @@ textarea{
   resize: none;
 }
 
+#username{
+  margin: 0.5rem auto;
+  min-width: 250px;
+  min-height: 20px;
+  max-width: 250px;
+  max-height: 20px;
+  width: 100%;
+  resize: none;
+}
+
+#dbURL{
+  margin: 0.5rem auto;
+  min-width: 250px;
+  min-height: 30px;
+  max-width: 250px;
+  max-height: 30px;
+  width: 100%;
+  resize: none;
+}
 button{
   border: none;
   padding: 20px;
